--- a/blockchain/app/Cargo.toml
+++ b/blockchain/app/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2024"
 
 [dependencies]
 sails-rs = "0.8.1"
-parity-scale-codec = { version = "3.6", features = ["derive"] }
-scale-info = { version = "2.10", features = ["derive"] }
+parity-scale-codec = { version = "3.6",default-features=false}
+scale-info = { version = "2.10",default-features=false}
