--- a/blockchain/client/Cargo.toml
+++ b/blockchain/client/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2024"
 
 [dependencies]
 mockall = { version = "0.12", optional = true }
-sails-rs = "0.8.1"
+sails-rs = { workspace = true }
 
 [build-dependencies]
 blockchain-app = { path = "../app" }
-sails-client-gen = "0.8.1"
-sails-idl-gen = "0.8.1"
+sails-client-gen = "0.8.0"
+sails-idl-gen = "0.8.0"
 
 [features]
 mocks = ["sails-rs/mockall", "dep:mockall"]
