--- a/blockchain/Cargo.toml
+++ b/blockchain/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2024"
 
 [dependencies]
 blockchain-app = { path = "app" }
+sails-rs = { version = "0.8.0", features = ["wasm-builder"] }
 
 [build-dependencies]
 blockchain-app = { path = "app" }
@@ -18,12 +19,12 @@ sails-idl-gen = "0.8.0"
 [dev-dependencies]
 blockchain = { path = ".", features = ["wasm-binary"] }
 blockchain-client = { path = "client" }
-sails-rs = { version = "0.8.0", features = ["gtest"] } # Keep default features for gtest if it relies on std for testing runner
+sails-rs = { version = "0.8.0", features = ["gtest"] }
 tokio = { version = "1.41", features = ["rt", "macros"] }
 
 [workspace.dependencies]
 sails-rs = { version = "=0.8.0", features = ["wasm-builder", "gtest"] }
-extended-vft-client = { git = "https://github.com/gear-foundation/standards/"}
+extended-vft-client = { git = "https://github.com/gear-foundation/standards/" }
 
 [features]
 wasm-binary = []
