--- a/blockchain/app/Cargo.toml
+++ b/blockchain/app/Cargo.toml
@@ -8,3 +8,8 @@ sails-rs = "0.8.0"
 parity-scale-codec = { version = "3.6", default-features = false }
 scale-info = { version = "2.10", default-features = false }
 extended-vft-client = { workspace = true }
+
+[dev-dependencies]
+serde = { version = "1.0", features = ["derive", "std"] }
+parity-scale-codec = { version = "3.6", features = ["std"] }
+scale-info = { version = "2.10", features = ["std"] }
